@@ -153,7 +153,7 @@ plan tests => 0 + 9
                 + 5 * scalar(@primes128)  # strong probable prime tests
                 + 5 * scalar(@comp128)    # strong probable prime tests
                 + 15  # Check Frobenius for small primes
-                + 2   # mrr with seed and neg bases
+                + 3   # mrr with seed and neg bases
                 + 4  *scalar(@perrint);   # Perrin pseudoprime types
                 + 0;
 
@@ -378,6 +378,8 @@ for my $p (2,3,5,7,11,13,17,19,23,29,31,37,41,43,47) {
 is(miller_rabin_random("5948714251747610466954817160823054375857",30,"0x6c7b06f2333c8390"), 1, "miller_rabin_random with a seed");
 # Test mrr with a negative number of bases
 ok(!eval { miller_rabin_random(10007,-4); },   "MRR(10007,-4)");
+# Test mrr with too many bases
+is(miller_rabin_random(123457,1000000), 1, "miller_rabin_random with excessive base number");
 
 ###### Perrin pseudoprimes
 for my $pdata (@perrint) {
