@@ -191,7 +191,7 @@ plan tests => 1
             + scalar(keys %primroots) + 1
             + 3 # is_primitive_root
             + scalar(keys %rtau)
-            + scalar(@crts)
+            + 1 + scalar(@crts)
             + 10;
 
 
@@ -277,4 +277,10 @@ foreach my $carg (@crts) {
   my($aref, $exp) = @$carg;
   my $crt = chinese(@$aref);
   is( $crt, $exp, "crt(".join(",",map { "[@$_]" } @$aref).") = " . ((defined $exp) ? $exp : "<undef>") );
+}
+{
+  my @rems = (102,320,954,458,786,192,220,437,726,904,162,27,518,10,138,712,246,213,234,863,1002,361,40,738,566,777,114,255,282,12,612,588,414,159,408,357,474,271,804,555,502,699,764,19,654,342,286,450,550,865,852,291,894,762,118,942,342,334,610,3,702,743,222,165,950,822,736,749,6,173,942,33,326,770,738,27,982,420,12,944,222,173,798,285,458,397,1026,631,118,969,712,641,138,386,836,1062,110,714,942,208,1002,150,190,532,150,1087,334,654,670,99,252,364,558,1020,744,467,366,655,242,714,502,399,1002,1106,146,852,984,12);
+  my $crt = chinese( map { [$rems[$_],1000+$_] } 0..127 );
+  my $exp = "136087033612415680135652384720211725322439455926600161642975712081793643488493755937124527801573888040172128823894114154111447649674574363111575626347716066313619599607917617189192959594301781868283458102";
+  is( $crt, $exp, "chinese with 128 arguments" );
 }
