@@ -54,7 +54,7 @@ my @log_neg = (qw/
 /);
 
 plan tests => 1+2+2+3  # logreal
-            + 6        # expreal
+            + 7        # expreal
             + 7        # powreal
             + 6        # rootreal
             + 5        # agmreal
@@ -92,6 +92,7 @@ is(expreal(100,71),'26881171418161354484126255515800135873611118.773741922415191
 is(expreal(100,12),'268811714182E32',"expreal(100,12)");
 is(expreal(-118.5,71),'.00000000000000000000000000000000000000000000000000034364014567198602057',"expreal(-118.5,71)");
 is(expreal("-394.84010945715266885",200),'.00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000033351796227864913872998321605',"expreal(-394.84010945715266885,200)");
+like(expreal(50,1200),qr/^5184705528587072464087.453\d+013724923667450316/,"expreal(50,1200)");
 
 ######## pow
 is(powreal(0,2.2,20),'.00000000000000000000',"powreal(0,2.2,20)");
